deployment_ops/kubernetes/k8s_redis_setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-redis-cache
  labels:
    app: redis
    tier: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      tier: cache
  template:
    metadata:
      labels:
        app: redis
        tier: cache
    spec:
      containers:
      - name: redis
        image: redis:6.2-alpine # Using a stable and lightweight Redis image
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
        - name: redis-persistent-storage
          mountPath: /data
      volumes:
      - name: redis-persistent-storage
        persistentVolumeClaim:
          claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-redis-cache
  labels:
    app: redis
    tier: cache
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    tier: cache
  type: ClusterIP
